[project]
name = "ecap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.1",
    "mypy>=2.3.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pre-commit>=4.6.1",
    "pylance>=8.0.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "scipy>=1.18.0",
]
